<resources>
    <string name="app_name">what the hellyburton</string>
    <string name="welcome">Welcome to my first Android App</string>
    <string name="name">Kirk Griffin Tan</string>
    <string name="proceed">Proceed</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="eMail">Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
</resources>