<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewInfo"
    android:background="@color/app_background">

    <TextView
        android:id="@+id/tvFirstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/firstname"
        app:layout_constraintEnd_toStartOf="@+id/tvFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/amarante"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvMiddleNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/middlename"
        app:layout_constraintEnd_toStartOf="@+id/tvMiddleName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstNameLabel"
        android:fontFamily="@font/amarante"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lastname"
        app:layout_constraintEnd_toStartOf="@+id/tvLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMiddleNameLabel"
        android:fontFamily="@font/amarante"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/eMail"
        app:layout_constraintEnd_toStartOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastNameLabel"
        android:fontFamily="@font/amarante"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFirstNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvFirstNameLabel" />

    <TextView
        android:id="@+id/tvMiddleName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvMiddleNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvMiddleNameLabel" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLastNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvLastNameLabel" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEmailLabel"
        app:layout_constraintTop_toTopOf="@+id/tvEmailLabel" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailLabel"
        android:fontFamily="@font/black_ops_one"
        android:backgroundTint="@color/proceed"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toTopOf="@+id/btnSave"
        android:fontFamily="@font/black_ops_one"
        android:backgroundTint="@color/proceed"
        android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>